force-app/main/default/objects/PMC_SS_SNOW_StatusMapping__mdt/PMC_SS_SNOW_StatusMapping__mdt.object-meta.xml
<CustomObject>
    <label>SNOW Status Mapping</label>
    <pluralLabel>SNOW Status Mapping</pluralLabel>
</CustomObject>