force-app/main/default/objects/PMC_SS_SNOW_StatusMapping__mdt/fields/PMC_SS_CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CaseStatus__c</fullName>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>