force-app/main/default/objects/PMC_SS_SNOW_StatusMapping__mdt/fields/PMC_SS_SNOW_Status__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SNOW_Status__c</fullName>
    <label>SNOW Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>