force-app/main/default/objects/PMC_SS_SNOW_StatusMapping__mdt/fields/PMC_SS_SNOW_StatusTranslatedLabel__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SNOW_StatusTranslatedLabel__c</fullName>
    <label>Status Translated Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>